@@ -2,6 +2,7 @@ package org.univcabi.univcabi.auth.security;
 
 
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -9,8 +10,11 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 import org.univcabi.univcabi.auth.entity.Authn;
 import org.univcabi.univcabi.auth.repository.AuthnRepository;
+import org.univcabi.univcabi.exception.ServiceException;
 
-import java.util.Collections;
+import java.util.List;
+
+import static org.univcabi.univcabi.exception.ExceptionStatus.USER_NOT_FOUND;
 
 @Service
 @RequiredArgsConstructor
@@ -20,12 +24,14 @@ public class CustomUserDetailsService implements UserDetailsService {
     @Override
     public UserDetails loadUserByUsername(String studentNumber) throws UsernameNotFoundException {
         Authn authn = authnRepository.findByStudentNumber(studentNumber)
-                .orElseThrow(()-> new UsernameNotFoundException("유저를 찾을 수 없습니다: "+studentNumber));
+                .orElseThrow(()-> new ServiceException(USER_NOT_FOUND));
+
+        String roleName = "ROLE_" + authn.getRole().name(); // ROLE_ADMIN, ROLE_NORMAL
 
         return User.builder()
                 .username(authn.getStudentNumber())
                 .password(authn.getPassword())
-                .authorities(Collections.emptyList())
+                .authorities(List.of(new SimpleGrantedAuthority(roleName))) // 이후 해당 권한 정보로 controller에서 권한 기반 접근 제어가 가능 ex) @PreAuthorize("hasRole('ADMIN')")
                 .build();
     }
 
